// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component renders connect theme correctly 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root testePanel css-tgd5hx Mui-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-controls="panel1a-content"
    aria-disabled={false}
    aria-expanded={true}
    className="MuiButtonBase-root MuiExpansionPanelSummary-root css-16kqoxr Mui-expanded"
    id="panel1a-header"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiExpansionPanelSummary-content Mui-expanded"
    >
      <span>
        Lorem Ipsum
      </span>
    </div>
    <div
      aria-disabled={false}
      aria-hidden={true}
      className="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={null}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root css-18o17hk"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-entered"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          aria-labelledby="panel1a-header"
          id="panel1a-content"
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root css-1d3fmc1"
          >
            <span>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Text Component renders correctly 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root testePanel css-192dlty Mui-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-controls="panel1a-content"
    aria-disabled={false}
    aria-expanded={true}
    className="MuiButtonBase-root MuiExpansionPanelSummary-root css-16kqoxr Mui-expanded"
    id="panel1a-header"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiExpansionPanelSummary-content Mui-expanded"
    >
      <span>
        Lorem Ipsum
      </span>
    </div>
    <div
      aria-disabled={false}
      aria-hidden={true}
      className="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={null}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root css-18o17hk"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-entered"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          aria-labelledby="panel1a-header"
          id="panel1a-content"
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root css-1d3fmc1"
          >
            <span
              data-testid="text-accordion"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum commodo.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
